--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.11.19",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^5.0.0",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0"
