--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@types/node": "^18.11.19",
     "cors": "^2.8.5",
+    "csv": "^6.2.8",
+    "csv-parser": "^3.0.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "js-yaml": "^4.1.0",
+    "jsonlines": "^0.1.1",
     "mongodb": "^5.0.0",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0"
